<?xml version="1.0"?>
<package format="2">
  <name>cbf_pc_selector</name>
  <version>2.0.0</version>
  <description>The cbf_pc_selector package</description>

  <maintainer email="martin.jacquet@ntnu.no">mjacquet</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_sensor_msgs</depend>
  </package>
