<?xml version="1.0"?>
<package format="3">
    <name>cbf_pc_selector</name>
    <version>2.0.0</version>
    <description>Composite CBF point cloud selector.</description>
    <maintainer email="martin.jacquet@ntnu.no">mjacquet</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>yaml-cpp</depend>

    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
